pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: wordpress
    tier: mysql
    release: stable
spec:
  containers:
  - image: mysql:5.6
    name: mysql
    ports:
    - containerPort: 3306
      name: mysql
  nodeSelector:
    release: stable
---
apiVersion: v1
kind: Pod
metadata:
  name: wp-stable
  labels:
    app: wordpress
    tier: web
    release: stable
spec:
  containers:
    - image: wordpress:4.8-apache
      name: wordpress
      ports:
      - containerPort: 80
        name: wordpress
  nodeSelector:
    release: stable
---
apiVersion: v1
kind: Pod
metadata:
  name: wp-master
  labels:
    app: wordpress
    tier: web
    release: master
spec:
  containers:
    - image: wordpress:4.8-apache
      name: wordpress
      ports:
      - containerPort: 80
        name: wordpress
  nodeSelector:
    release: master
