master-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: web-master
  labels:
    release: master
spec:
  ports:
    - port: 80
      nodePort: 30080
  selector:
    release: master
    tier: web
  #type: LoadBalancer
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: master-deployment
  labels:
    app: wordpress
spec:
  # strategy:
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
        release: master
        tier: web
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
      nodeSelector:
        release: master
