ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: web-master
          servicePort: 80
  - host: foo.bar2.com
    http:
      paths:
      - backend:
          serviceName: web-master
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: web-stable
          servicePort: 80
